# BugFinder

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml
bugfinder/: __init__.py  __main__.py  mcp_server.py
bugfinder/agents/: base.py  correlation.py
bugfinder/agents/android/: decompile.py  deeplinks.py  storage.py  webview.py
bugfinder/agents/api/: auth.py  discover.py  fuzz.py  rate.py
bugfinder/agents/cloud/: azure.py  detect.py  firebase.py  gcp.py  s3.py
bugfinder/agents/infra/: port.py  service.py  tls.py
bugfinder/agents/recon/: dns.py  github.py  googledorks.py  subdomain.py  tech.py  wayback.py
bugfinder/agents/redteam/: __init__.py  c2_implant.py  data_exfil.py  evasion.py  lateral_movement.py  persistence.py  pivot.py  priv_esc.py
bugfinder/agents/secrets/: scan.py
bugfinder/agents/verification/: verify.py
bugfinder/agents/web/: auth.py  cache.py  cookies.py  cors.py  crawler.py  csp.py  csrf.py  graphql.py  host_header.py  js.py  jwt.py  lfi.py  race.py  redirect.py  sqli.py  ssrf.py  ssti.py  xss.py  xxe.py
bugfinder/ai/: chat_agent.py  client.py  correlator.py  false_positive.py  path_discovery.py  payload_selector.py  prompts.py
bugfinder/ci/: mode.py
bugfinder/cli/: app.py  app.tcss  commands.py  launcher.py  wizard.py
bugfinder/core/: config.py  exceptions.py  registry.py  types.py
bugfinder/database/: models.py  repository.py  session.py
bugfinder/database/migrations/: env.py
bugfinder/database/migrations/versions/: 8919e69f4702_initial.py
bugfinder/engine/: batch.py  oob_server.py  parallel.py  pause_resume.py  poc_generator.py  schedule.py  scheduler.py
bugfinder/exploit/: engine.py  executor.py  interactive.py  strategies.py
bugfinder/knowledge_graph/: graph.py  schema.py
bugfinder/learning/: resources.py  tutorials.py
bugfinder/notifications/: email.py  github_issues.py  webhooks.py
bugfinder/planner/: ai_planner.py  base.py  plan.py  rule_planner.py
bugfinder/plugins/: example.py  loader.py  sdk.py
bugfinder/proxy/: __init__.py  capture.py  repeater.py  server.py
bugfinder/reporting/: ai_explainer.py  auto_fix.py  diff.py  html.py  json_report.py  markdown.py  pdf.py
bugfinder/security/: rate_limiter.py  scope.py
bugfinder/utils/: crypto.py  http.py
bugfinder/web/: __init__.py  app.py  auth.py  config.py  models.py
bugfinder/web/routes/: __init__.py  agents.py  auth.py  chat.py  comments.py  config.py  dashboard.py  exploit.py  exports.py  findings.py  graph.py  learn.py  plugins.py  projects.py  proxy.py  remediation.py  reports.py  scans.py  sse.py  teams.py
bugfinder/web/static/css/: app.css  chat.css
bugfinder/web/static/js/: app.js
bugfinder/web/templates/: 404.html  500.html  base.html  chat.html  exploit_panel.html  exports.html  finding_detail.html  findings.html  graph.html  index.html  learn.html  login.html  plugins.html  projects.html  proxy.html  scan_detail.html  scans.html  settings.html  teams.html
bugfinder/workflow/: __init__.py  engine.py  phases.py  reporter.py  templates.py
tests/: conftest.py  test_cli_commands.py  test_core_types.py  test_knowledge_graph.py  test_new_agents.py  test_security.py  test_target_detector.py  test_utils.py
