[project]
name = "bugfinder"
version = "0.1.0"
description = "AI-powered autonomous bug bounty assistant and security assessment platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "highoncomputers" },
]
keywords = ["security", "bug-bounty", "penetration-testing", "vulnerability-scanner", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Bug Tracking",
]

dependencies = [
    "typer>=0.15.0",
    "textual>=3.0.0",
    "httpx>=0.28.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "aiosqlite>=0.20.0",
    "networkx>=3.4.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "rich>=13.9.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "importlib-metadata>=8.0.0",
    "python-dotenv>=1.0.0",
    "platformdirs>=4.3.0",
    "orjson>=3.10.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
    "sphinx>=8.0.0",
    "sphinx-rtd-theme>=3.0.0",
]
postgres = [
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.30.0",
]
pdf = [
    "weasyprint>=63.0",
]
android = [
    "androguard>=3.4.0",
]

[project.scripts]
bf = "bugfinder.cli.commands:app"

[project.entry-points."bugfinder.plugins"]
example = "bugfinder.plugins.example"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bugfinder"]

[tool.hatch.build.targets.sdist]
include = ["bugfinder/", "tests/"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
